Print operator strategy limit violations
Signed-off-by: CARON Alice <alice.caron@rte-france.com>