@@ -10,6 +10,10 @@ package com.powsybl.security;
 import com.powsybl.commons.io.table.CsvTableFormatterFactory;
 import com.powsybl.commons.io.table.TableFormatterConfig;
 import com.powsybl.contingency.Contingency;
+import com.powsybl.contingency.ContingencyContext;
+import com.powsybl.contingency.strategy.ConditionalActions;
+import com.powsybl.contingency.strategy.OperatorStrategy;
+import com.powsybl.contingency.strategy.condition.AtLeastOneViolationCondition;
 import com.powsybl.contingency.violations.LimitViolation;
 import com.powsybl.contingency.violations.LimitViolationFilter;
 import com.powsybl.contingency.violations.LimitViolationHelper;
@@ -21,6 +25,7 @@ import com.powsybl.loadflow.LoadFlowResult;
 import com.powsybl.security.limitreduction.SimpleLimitsComputer;
 import com.powsybl.security.results.ConnectivityResult;
 import com.powsybl.security.results.NetworkResult;
+import com.powsybl.security.results.OperatorStrategyResult;
 import com.powsybl.security.results.PostContingencyResult;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -80,7 +85,26 @@ class SecurityTest {
             new LimitViolationsResult(Arrays.asList(line1Violation, line2Violation), Collections.singletonList("action2")),
             NetworkResult.empty(), ConnectivityResult.empty(), Double.NaN);
 
-        result = new SecurityAnalysisResult(preContingencyResult, LoadFlowResult.ComponentResult.Status.CONVERGED, Collections.singletonList(postContingencyResult));
+        List<OperatorStrategyResult> operatorStrategyResults = new ArrayList<>(Collections.emptyList());
+        OperatorStrategyResult opStrategyResult1 = new OperatorStrategyResult(
+            new OperatorStrategy("strategy1", ContingencyContext.specificContingency(contingency1.getId()),
+                List.of(new ConditionalActions("stage1", new AtLeastOneViolationCondition(Collections.singletonList("violationId1")), Collections.singletonList("actionId1")))),
+            List.of(new OperatorStrategyResult.ConditionalActionsResult("strategy1", PostContingencyComputationStatus.CONVERGED,
+                    new LimitViolationsResult(Arrays.asList(line1Violation, line2Violation), Collections.singletonList("action2")),
+                    NetworkResult.empty(),
+                    3.45)
+            )
+        );
+        operatorStrategyResults.add(opStrategyResult1);
+
+        result = new SecurityAnalysisResult(preContingencyResult,
+                LoadFlowResult.ComponentResult.Status.CONVERGED,
+                Collections.singletonList(postContingencyResult),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                operatorStrategyResults
+        );
     }
 
     @Test
@@ -132,6 +156,41 @@ class SecurityTest {
                                  ",,action2,,,,,,,,,,",
                                  ",,,NHV1_NHV2_2,VLHV1,FR,380,CURRENT,permanent2,950.0000,855.0000,95.0000,105.56"),
                      writer.toString().trim());
+    }
+
+    @Test
+    void printOperatorStrategyViolations() throws Exception {
+        StringWriter writer = new StringWriter();
+        try {
+            Security.printOperatorStrategyViolations(result, network, writer, formatterFactory, formatterConfig, null, false);
+        } finally {
+            writer.close();
+        }
+        assertEquals(String.join(System.lineSeparator(),
+                        "Operator strategy limit violations",
+                        "Operator strategy,Status,Contingency,Equipment (2),End,Country,Base voltage,Violation type,Violation name,Value,Limit,abs(value-limit),Loading rate %",
+                        "strategy1,CONVERGED,contingency1,Equipment (2),,,,,,,,,",
+                        ",,action2,,,,,,,,,,",
+                        ",,,NHV1_NHV2_1,VLHV1,FR,380,CURRENT,permanent,1100.0000,950.0000,150.0000,110.00",
+                        ",,,NHV1_NHV2_2,VLHV1,FR,380,CURRENT,permanent2,950.0000,855.0000,95.0000,105.56"),
+                writer.toString().trim());
+    }
+
+    @Test
+    void printOperatorStrategyViolationsWithPreContingencyViolationsFiltering() throws Exception {
+        StringWriter writer = new StringWriter();
+        try {
+            Security.printOperatorStrategyViolations(result, network, writer, formatterFactory, formatterConfig, null, true);
+        } finally {
+            writer.close();
+        }
+        assertEquals(String.join(System.lineSeparator(),
+                        "Operator strategy limit violations",
+                        "Operator strategy,Status,Contingency,Equipment (1),End,Country,Base voltage,Violation type,Violation name,Value,Limit,abs(value-limit),Loading rate %",
+                        "strategy1,CONVERGED,contingency1,Equipment (1),,,,,,,,,",
+                        ",,action2,,,,,,,,,,",
+                        ",,,NHV1_NHV2_2,VLHV1,FR,380,CURRENT,permanent2,950.0000,855.0000,95.0000,105.56"),
+                writer.toString().trim());
     }
 
     @Test
